--- a/src/css/neuro.css
+++ b/src/css/neuro.css
@@ -1,8 +1,14 @@
+@keyframes fade {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
 html, body {
     margin: 0;
     padding: 0;
     font-family: "Roboto", sans-serif;
     font-size: 14px;
+    animation: fade 0.5s ease-in;
 }
 
 #flex {
