--- a/src/css/neuro.css
+++ b/src/css/neuro.css
@@ -27,13 +27,12 @@ html, body {
     flex-wrap: nowrap;
     align-items: flex-end;
     justify-content: center;
-    _border: 1px solid rgb(255,100,100);
 }
 
 #controls {
     width: 300px;
     height: 400px;
-    padding: 4px 10px;
+    padding: 10px 10px;
 }
 
 #status {
@@ -48,6 +47,18 @@ html, body {
     height: 400px;
 }
 
+#info {
+    background-color: rgb(255, 255, 255);
+    position: absolute;
+    top: 53px;
+    width: 400px;
+    height: 400px;
+    padding: 10px 10px;
+    font-family: 'Courier New', Courier, monospace;
+    font-size: 11px;
+    white-space: pre;
+}
+
 .slider {
     padding: 16px 10px;
 }
@@ -55,4 +66,8 @@ html, body {
 .button {
     width: 85px;
     margin: 4px !important;
+}
+
+.hidden {
+    visibility: hidden;
 }
