--- a/src/css/neuro.css
+++ b/src/css/neuro.css
@@ -20,19 +20,23 @@ html, body {
 }
 
 #content {
-    min-width: 718px;
-    width: 718px;
+    width: 720px;
     display: flex;
     flex-direction: row;
-    flex-wrap: nowrap;
+    flex-wrap: wrap;
     align-items: flex-end;
-    justify-content: center;
 }
 
 #controls {
     width: 300px;
     height: 400px;
     padding: 10px 10px;
+}
+
+#gameFlex {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
 }
 
 #status {
@@ -56,7 +60,14 @@ html, body {
     padding: 10px 10px;
     font-family: 'Courier New', Courier, monospace;
     font-size: 11px;
+    line-height: 12px;
     white-space: pre;
+}
+
+#graph {
+    width: 710px;
+    height: 200px;
+    padding: 8px 8px;
 }
 
 .slider {
